@@ -2,7 +2,7 @@ require File.dirname(__FILE__) + '/story_helper'
 
 module Spec
   module Story
-    describe Step do
+    describe Step, "matching" do
       it "should match a text string" do
         step_matcher = Step.new("this text") {}
         step_matcher.matches?("this text").should be_true
@@ -58,6 +58,14 @@ module Spec
         step_matcher.matches?("other anything text").should be_false
       end
       
+      it "should not get bogged down by parens in strings" do
+        step_matcher = Step.new("before () after") {}
+        step_matcher.matches?("before () after").should be_true
+      end
+      
+    end
+    
+    describe Step do
       it "should make complain with no block" do
         lambda {
           step_matcher = Step.new("foo")
